# codeshaper-re

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/expression/: mod.rs  visitor.rs
core/src/expression/syntax/: expression.pest  mod.rs  parser.rs
core/src/navigation_ast/: mod.rs
core/src/project/: mod.rs  settings.rs
core/src/shaping/: mod.rs
core/src/shaping/patch/: builder.rs  controller.rs  maker.rs  mod.rs  replacer.rs  resolver.rs
core/src/target_project/: file_iter.rs  file_map.rs  iterator.rs  mod.rs
core/src/target_project/kinds/: mod.rs
core/src/target_project/kinds/text/: file.rs  group.rs  mod.rs  project.rs
core/src/target_project/kinds/vcx/: mod.rs
core/src/workspace/: config.rs  mod.rs  operation.rs
core/tests/: mod.rs
core/tests/data/patches/: expected_greet.scl  greet.scl  hello.act  hello.kdl
core/tests/data/test_workspace/shaping_project/: config.json5
core/tests/data/test_workspace/shaping_project/patches/: earth.yml  new_world.yml
core/tests/expression/: mod.rs
core/tests/navigation_ast/: mod.rs  nav_provider.rs
core/tests/patch/: mod.rs
core/tests/project/: mod.rs
core/tests/target_project/: mod.rs
core/tests/workspace/: mod.rs
nav-ast-pest/: Cargo.toml
nav-ast-pest/src/: lib.rs
target-test/: Cargo.toml
target-test/src/: lib.rs  nodes.rs  target.rs  target_test.rs
