[package]
name = "codeshaper-core"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
glob = "0.3.1"
json5 = "0.4.1"
knuffel = "3.2.0"
miette = { version= "5.9.0", features=["fancy"] }
once_cell = "1.18.0"
pest = "2.7.0"
pest_derive = "2.7.0"
pretty_assertions = "1.4.0"
regex = "1.9.1"
serde = "1.0.171"
serde_derive = "1.0.171"
stopwatch = "0.0.7"

downcast-rs = "1.2.0"
as-any = "0.3.0"

